Change color of todohuken

--- a/JavaBasic/resources/html/Gotochi/Gotochi.html
+++ b/JavaBasic/resources/html/Gotochi/Gotochi.html
@@ -23,6 +23,7 @@
       line-height: 2em;
        border-bottom: double 5px #FFC778;
     }
+
   </style>
 </head>
 <body onload="selectLv1()">
@@ -81,7 +82,7 @@
       </select>
     </div>
     <div class="col-8 text-center">
-      <p id="targetTodohu"><a href="https://www.pref.hokkaido.lg.jp/">北海道</a></p>
+      <p id="targetTodohu"><b><a class="link-dark" href="https://www.pref.hokkaido.lg.jp/">北海道</a></b></p>
     </div>
     <div class="col-2">
       <select id="shityoson">
