--- a/JavaBasic/resources/html/Gotochi/Gotochi.html
+++ b/JavaBasic/resources/html/Gotochi/Gotochi.html
@@ -50,7 +50,7 @@
         <option data-todohu="toyama" data-color1="#808080" value="https://www.pref.toyama.jp/">富山県</option>
         <option data-todohu="ishikawa" data-color1="#ffffff" value="https://www.pref.ishikawa.lg.jp/">石川県</option>
         <option data-todohu="fukui" data-color1="#808080" value="https://www.pref.fukui.lg.jp/">福井県</option>
-        <option data-todohu="yanashi" data-color1="#7fff00" value="https://www.pref.yamanashi.jp/">山梨県</option>
+        <option data-todohu="yamanashi" data-color1="#7fff00" value="https://www.pref.yamanashi.jp/">山梨県</option>
         <option data-todohu="nagano" data-color1="#800080" value="https://www.pref.nagano.lg.jp/">長野県</option>
         <option data-todohu="gifu" data-color1="#008000" value="https://www.pref.gifu.lg.jp/">岐阜県</option>
         <option data-todohu="shizuoka" data-color1="#ff4500" value="https://www.pref.shizuoka.jp/">静岡県</option>
